Add Sign-in and Sing-up form page into project

--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Contactim | Home</title>
     <link rel="stylesheet" href="styles/css/main.css" />
 </head>
 
 <body>
     <header id="header">
         <section class="logo">
-            <h1 id="logo">Contactim</h1>
+            <h1 id="logo"><a href="index.html">Contactim</a></h1>
         </section>
         <!-- Mobile Navbar -->
         <nav id="nav-mobile">
-            <a id="btn-account" href="#">Account</a>
+            <a id="btn-account" href="account.html">Account</a>
         </nav>
 
         <!-- Desktop Navbar -->
         <nav id="nav-desktop">
             <ul>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">New Account</a></li>
+                <li><a href="sign-in.html">Login</a></li>
+                <li><a href="sign-up.html">New Account</a></li>
             </ul>
         </nav>
     </header>
