Optimizing parts of the project structurally. And add & design profile page

--- a/sign-in.html
+++ b/sign-in.html
@@ -36,7 +36,7 @@
                     
                     <button class="btn-google">
                         <span><img width="18px" src="styles/images/Icon/Google G.svg" alt=""></span>
-                        <img src="styles/img/Icon/Google Logo.svg" alt=""> Continue with
+                        <img src="styles/img/Icon/Google Logo.svg" alt=""> Sign in with
                         Google
                     </button>
                     
@@ -60,15 +60,15 @@
     <footer id="footer">
         <!-- Show on Desktop -->
         <section id="copyright">
-            <p>All copyright Reserved by <a href="#">@getShCc</a> | &copy; 2022</p>
+            <p>All copyright Reserved by <a href="https://instagram.com/iamShCc">@iamShCc</a> | &copy; 2022</p>
         </section>
 
         <section id="social-medias">
             <ul>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">getShCc</a></li>
+                <li><a href="https://github.com/getshcc/contactim">Github</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="profile.html">Contact us</a></li>
+                <li><a href="https://github.com/getshcc">getShCc</a></li>
             </ul>
         </section>
     </footer>
