--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </section>
         <!-- Mobile Navbar -->
         <nav id="nav-mobile">
-            <a id="btn-account" href="account.html">Account</a>
+            <a id="btn-account" href="sign-in.html">Account</a>
         </nav>
 
         <!-- Desktop Navbar -->
@@ -64,15 +64,15 @@
     <footer id="footer">
         <!-- Show on Desktop -->
         <section id="copyright">
-            <p>All copyright Reserved by <a href="#">@getShCc</a> | &copy; 2022</p>
+            <p>All copyright Reserved by <a href="https://instagram.com/iamShCc">@iamShCc</a> | &copy; 2022</p>
         </section>
 
         <section id="social-medias">
             <ul>
-                <li><a href="#">Github</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">getShCc</a></li>
+                <li><a href="https://github.com/getshcc/contactim">Github</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="profile.html">Contact us</a></li>
+                <li><a href="https://github.com/getshcc">getShCc</a></li>
             </ul>
         </section>
     </footer>
