add password recovery form page & dashboard pages basic layout
add dashboard empty page for now...

--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
             <div class="regular">
                 <h2>
                     Let’s go, <span class="bold">Create</span> <br />
-                    your content <span class="bold">profile</span>.
+                    your contact <span class="bold">profile</span>.
                 </h2>
                 <p>Continue for get Free and Unlimited account.</p>
                 <!-- Desktop -->
                 <div class="continue-main d-switch flex-start">
                     <button id="google-continue" class="btn-google">
                         <span><img width="18px" src="styles/images/Icon/Google G.svg" alt="" /></span>
-                        <img src="styles/img/Icon/Google Logo.svg" alt="" /> Continue with
-                        Google
+                        <img src="styles/img/Icon/Google Logo.svg" alt="" /> Continue with Google
                     </button>
                     <a class="btn-another" href="#">other ways...</a>
                 </div>
@@ -64,7 +63,7 @@
     <footer id="footer">
         <!-- Show on Desktop -->
         <section id="copyright">
-            <p>All copyright Reserved by <a href="https://instagram.com/iamShCc">@iamShCc</a> | &copy; 2022</p>
+            <p>licensed under the MIT License. Develop by <a href="https://instagram.com/iamShCc">@iamShCc</a> | &copy; 2022</p>
         </section>
 
         <section id="social-medias">
