--- a/profile.html
+++ b/profile.html
@@ -55,7 +55,7 @@
                 <article class="contact-item">
                     <div class="content">
                         <img src="styles/img/Icon/Facebook.svg" alt="Facebook svg logo">
-                        <p>@ iamShCc</p>
+                        <p>iamShCc</p>
                     </div>
                     <a href="https://facebook.com/" class="specifi-link"><img src="styles/img/Icon/45deg-arrow.svg" alt="link-arrow"></a>
                 </article>
@@ -63,7 +63,7 @@
                 <article class="contact-item">
                     <div class="content">
                         <img src="styles/img/Icon/Instagram.svg" alt="Instagram svg logo">
-                        <p>@ iamShCc</p>
+                        <p>iamShCc</p>
                     </div>
                     <a href="https://instagram.com/iamshcc" class="specifi-link"><img src="styles/img/Icon/45deg-arrow.svg" alt="link-arrow"></a>
                 </article>
@@ -71,7 +71,7 @@
                 <article class="contact-item">
                     <div class="content">
                         <img src="styles/img/Icon/Github.svg" alt="Github svg logo">
-                        <p>@ getShCc</p>
+                        <p>getShCc</p>
                     </div>
                     <a href="https://github.com/getshcc" class="specifi-link"><img src="styles/img/Icon/45deg-arrow.svg" alt="link-arrow"></a>
                 </article>
