--- a/sign-up.html
+++ b/sign-up.html
@@ -56,7 +56,7 @@
 
                     <div class="match">
                         <a href="sign-in.html">Login</a>
-                        <a href="#">Forget Password?</a>
+                        <!-- <a href="passwoed-recovery.html">Forget Password?</a> -->
                     </div>
                 </form>
             </section>
