--- a/passwoed-recovery.html
+++ b/passwoed-recovery.html
@@ -1,6 +1,3 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Account - Login</title>
+    <title>Account - Recovery</title>
     <link rel="stylesheet" href="styles/css/main.css" />
 </head>
 
@@ -33,27 +30,17 @@
 
     <main id="main-account">
         <section class="form-box">
-            <h3 class="head-line">Login</h3>
+            <h3 class="head-line">Password Recovery</h3>
             <section class="form">
                 <form action="#">
-                    
-                    <button class="btn-google">
-                        <span><img width="18px" src="styles/images/Icon/Google G.svg" alt=""></span>
-                        <img src="styles/img/Icon/Google Logo.svg" alt=""> Sign in with
-                        Google
-                    </button>
-                    
                     <label for="user">Username / Email:</label>
                     <input type="text" name="user" id="inp-user">
 
-                    <label for="user">Password:</label>
-                    <input type="text" name="password" id="inp-pass">
-
-                    <button class="btn btn-login">Login</button>
+                    <button class="btn btn-recovery">Password Recovery</button>
 
                     <div class="match">
                         <a href="sign-up.html">New Account</a>
-                        <a href="passwoed-recovery.html">Forget Password?</a>
+                        <!-- <a href="passwoed-recovery.html">passwoed-recovery</a> -->
                     </div>
                 </form>
             </section>
