95% of the project is completed

--- a/dashboard-empty.html
+++ b/dashboard-empty.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contactim | Home</title>
     <link rel="stylesheet" href="styles/css/main.css" />
+    <link rel="icon" href="styles/img/Icon/fav.svg">
+
 </head>
 
 <body>
@@ -45,6 +47,11 @@
                 <button class="btn btn-add">Add</button>
             </form>
 
+
+            <div class="img-empty">
+                <img width="200px" src="styles/img/3d-stripy-malbert.png" alt="empty board">
+            </div>
+
         </section>
 
     </main>
@@ -58,7 +65,6 @@
         <section id="social-medias">
             <ul>
                 <li><a href="https://github.com/getshcc/contactim">Github</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="profile.html">Contact us</a></li>
                 <li><a href="https://github.com/getshcc">getShCc</a></li>
             </ul>
