--- a/profile.html
+++ b/profile.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contactim | Home</title>
     <link rel="stylesheet" href="styles/css/main.css" />
+    <link rel="icon" href="styles/img/Icon/fav.svg">
+
 </head>
 
 <body>
@@ -45,7 +47,7 @@
 
                     <div class="content">
                         <img src="styles/img/Icon/ShCc.svg" alt="shcc svg logo">
-                        <p>ShCc.dev</p>
+                        <p>ShCc.com</p>
                     </div>
 
                     <a href="https://shcc.dev" class="specifi-link"><img src="styles/img/Icon/45deg-arrow.svg" alt="link-arrow"></a>
@@ -90,8 +92,8 @@
 
         <section id="social-medias">
             <ul>
+                <li><a href="all-pages.html">All pages</a></li>
                 <li><a href="https://github.com/getshcc/contactim">Github</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="profile.html">Contact us</a></li>
                 <li><a href="https://github.com/getshcc">getShCc</a></li>
             </ul>
