--- a/sign-in.html
+++ b/sign-in.html
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account - Login</title>
     <link rel="stylesheet" href="styles/css/main.css" />
+    <link rel="icon" href="styles/img/Icon/fav.svg">
+
 </head>
 
 <body>
@@ -68,8 +70,8 @@
 
         <section id="social-medias">
             <ul>
+                <li><a href="all-pages.html">All pages</a></li>
                 <li><a href="https://github.com/getshcc/contactim">Github</a></li>
-                <li><a href="about.html">About</a></li>
                 <li><a href="profile.html">Contact us</a></li>
                 <li><a href="https://github.com/getshcc">getShCc</a></li>
             </ul>
